--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Toss App</title>
 </head>
 <body>
+    <h1>Toss What you want "Masjid" or "Chand"!</h1>
     <button onclick="toss('masjid')">Masjid</button>
     <button onclick="toss('chand')">Chand</button>
 
