--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Toss What you want "Masjid" or "Chand"!</h1>
     <button onclick="toss('masjid')">Masjid</button>
     <button onclick="toss('chand')">Chand</button>
+    <img id="image" src="" alt="" width="200px">
+    <p id="result"></p>
 
 
 
